# vcpkg-http-cache

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  vcpkg.json
.github/workflows/: build.yml
src/: accesspermission.cpp  accesspermission.hpp  apikey.cpp  apikey.hpp  main.cpp  options.cpp  options.hpp  persistence.cpp  persistence.hpp  policyengine.cpp  policyengine.hpp  server.cpp  server.hpp  version.hpp
src/filters/: authfilter.cpp  authfilter.hpp
